# django-data-interrogator

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  launch_app  manage.py  pyproject.toml  setup.py
.github/workflows/: django.yaml
app/: settings.py  urls.py
app/shop/: README.rst  admin.py  apps.py  data.py  models.py  tests._py
app/shop/fixtures/: data.json
app/shop/migrations/: 0002_choices.py  0003_producttag.py
app/templates/: base.html  home.html  typeahead.html
data_interrogator/: __init__.py  admin.py  admin_urls.py  aggregators.py  apps.py  db.py  exceptions.py  fields.py  forms.py  interrogators.py  models.py  settings.py  urls.py  urls_admin.py  utils.py  views.py  wsgi.py
data_interrogator/admin/: __init__.py  apps.py  forms.py  urls.py  views.py
data_interrogator/management/commands/: dragnet.py
data_interrogator/migrations/: 0001_initial.py  0002_auto_20160219_1519.py  0003_auto_20160307_1444.py
data_interrogator/saved_tables/: __init__.py  admin.py  urls.py  views.py
data_interrogator/static/data_interrogator/: multichar.admin.js  multichar.public.js  multicharfield.js  (+1 more)
data_interrogator/templatetags/: data_interrogator.py  data_interrogator_tags.py  investigation.py
data_interrogator/tests/: settings.py  tests.py  urls.py
data_interrogator/views/: __init__.py  debug.py  lookups.py  pivot.py  uploader.py  utils.py  views.py
dev/: Dockerfile  docker-compose.yml
docs/: README.rst  conf.py  importing.rst
tests/: settings.py  tests.py  urls.py
tests/templates/: test_table_display.html
(+58 files in other folders)
