[tool.poetry]
name = "django-data-interrogator"
version = "0.3.5"
description = "A suite of interactive table builder utilities that create reports using efficient SQL queries"
authors = ["Aristotle Metadata Enterprises"]
license = "BSD-3-Clause"
readme = "README.rst"
packages = [
    {include = "data_interrogator"}
]

[tool.poetry.dependencies]
python = "^3.7"
django = ">3.1, <=4.2"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
dj-database-url = "~0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
^/app/shop/migrations/*  # exclude test app migrations
'''
